[translation] Integrated Swedish translation
And translated app name too.

--- a/harbour-counter.desktop
+++ b/harbour-counter.desktop
@@ -2,6 +2,7 @@
 Type=Application
 Name=Counter
 Name[ru]=Счётчик
+Name[sv]=Räknare
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-counter
 Exec=harbour-counter
