[translation] Integrated Chinese translation

--- a/harbour-counter.desktop
+++ b/harbour-counter.desktop
@@ -3,6 +3,7 @@ Type=Application
 Name=Counter
 Name[ru]=Счётчик
 Name[sv]=Räknare
+Name[zh_CN]=计数器
 X-Nemo-Application-Type=silica-qt5
 Icon=harbour-counter
 Exec=harbour-counter
